<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="song">Songs</string>
    <string name="artist">Artists</string>
    <string name="album">Albums</string>
    <string name="library">Library</string>
    <string name="play_list">Playlist</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="feedback">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">Enter name..</string>
    <string name="permission_denied">Permission Denied, You cannot access database</string>
    <string name="ask_permission">You need to allow access to the permissions</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="view_as">View as</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="sort_by">Sort by</string>
    <string name="duration">Duration</string>
    <string name="equalizer">Equalizer</string>
    <string name="year">Year</string>
    <string name="number_of_song">Number of songs</string>
    <string name="number_of_ablum">Number of albums</string>
    <string name="song_low_case">songs</string>
    <string name="album_low_case">albums</string>
    <string name="fragments_image_trans">fragment_image_trans</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="success_add_to_queue">1 song added to the queue</string>
    <string name="redo">Redo</string>
    <string name="deleted">deleted</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="auto_playlist">Auto playlist</string>
    <string name="recent_played">Recently Played</string>
    <string name="last_added">Last Added</string>
    <string name="add_playlist">Add to playlist</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="song_added_to_playlist">songs added to playlist</string>
    <string name="failed_insert_song">Failed to insert song to playlist</string>
    <string name="failed_to_create_playlist">Failed to create playlist</string>
    <string name="time">TIME</string>
    <string name="search">Search</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="no_song_selected">No song selected!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
