<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_background_playlist_item"
        android:src="@drawable/music_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_50"/>
    <TextView
        android:id="@+id/tv_auto_playlist"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/auto_playlist"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/tv_playlist_number"
        android:textSize="30dp"
        android:text="@string/create"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/tv_playlist_title_item"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:text="@string/last_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_song_nums_playlist_item"/>
    <TextView
        android:id="@+id/tv_song_nums_playlist_item"
        android:text="@string/song"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>